--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json",
-    "deploy": "aws s3 sync public/ s3://bwanabanana.com"
+    "deploy": "aws s3 sync public/ s3://bwanabanana.com",
+    "start": "node server/server.js"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
