--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "node-server": "node server/server.js"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^0.2.9",
+    "aws-amplify": "^3.0.18",
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
