--- a/package.json
+++ b/package.json
@@ -8,50 +8,58 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.js",
     "deploy": "aws s3 sync public/ s3://bwanabanana.com",
     "node-server": "node server/server.js"
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^0.2.9",
+    "@babel/core": "^7.10.4",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.3",
+    "@babel/plugin-transform-classes": "^7.10.3",
+    "@babel/plugin-transform-runtime": "^7.10.3",
+    "@babel/plugin-transform-spread": "^7.10.1",
+    "@babel/preset-env": "^7.10.3",
+    "@babel/preset-react": "^7.10.1",
     "aws-amplify": "^3.0.18",
-    "babel-cli": "6.24.1",
-    "babel-core": "6.25.0",
-    "babel-loader": "7.1.1",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-object-rest-spread": "6.23.0",
-    "babel-preset-env": "1.5.2",
-    "babel-preset-react": "6.24.1",
-    "express": "4.15.4",
-    "extract-text-webpack-plugin": "3.0.0",
-    "moment": "2.18.1",
-    "node-sass": "4.14.1",
-    "normalize.css": "7.0.0",
-    "numeral": "2.0.6",
-    "raf": "3.3.2",
-    "react": "16.0.0",
-    "react-addons-shallow-compare": "15.6.0",
-    "react-dates": "12.7.0",
-    "react-dom": "16.0.1",
-    "react-modal": "2.2.2",
-    "react-redux": "5.0.5",
-    "react-router-dom": "5.2.0",
-    "redux": "3.7.2",
-    "redux-mock-store": "1.2.3",
-    "redux-thunk": "2.2.0",
-    "sass-loader": "6.0.6",
-    "uuid": "3.1.0",
-    "validator": "8.0.0",
-    "webpack": "3.1.0"
+    "babel-loader": "^8.1.0",
+    "express": "^4.15.4",
+    "moment": "^2.18.1",
+    "node-sass": "^4.14.1",
+    "normalize.css": "^7.0.0",
+    "numeral": "^2.0.6",
+    "raf": "^3.3.2",
+    "react": "^16.0.0",
+    "react-addons-shallow-compare": "^15.6.0",
+    "react-dates": "^12.7.0",
+    "react-dates-temp": "^21.1.3",
+    "react-dom": "^16.0.1",
+    "react-modal": "^3.11.2",
+    "react-redux": "^5.0.5",
+    "react-router-dom": "^5.2.0",
+    "redux": "^3.7.2",
+    "redux-mock-store": "^1.2.3",
+    "redux-thunk": "^2.2.0",
+    "sass-loader": "^6.0.6",
+    "uuid": "^3.1.0",
+    "validator": "^8.0.0",
+    "webpack": "^4.43.0"
   },
   "devDependencies": {
-    "cross-env": "5.0.5",
-    "dotenv": "4.0.0",
-    "enzyme": "3.0.0",
-    "enzyme-adapter-react-16": "1.0.0",
-    "enzyme-to-json": "3.0.1",
-    "jest": "20.0.4",
-    "react-test-renderer": "16.0.0",
-    "webpack-dev-server": "2.5.1"
+    "@babel/cli": "^7.10.4",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^24.1.0",
+    "cross-env": "^5.0.5",
+    "dotenv": "^4.0.0",
+    "enzyme": "^3.0.0",
+    "enzyme-adapter-react-16": "^1.0.0",
+    "enzyme-to-json": "^3.0.1",
+    "jest": "^24.1.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "react-test-renderer": "^16.0.0",
+    "regenerator-runtime": "^0.13.5",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
