--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "Alex Davis",
   "license": "MIT",
   "scripts": {
-    "build:dev": "webpack",
-    "build:prod": "webpack -p --env production",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production -p --env production",
     "dev-server": "webpack-dev-server",
     "test": "cross-env NODE_ENV=test jest --config=jest.config.js",
     "deploy": "aws s3 sync public/ s3://bwanabanana.com",
@@ -25,22 +25,23 @@
     "aws-amplify": "^3.0.18",
     "babel-loader": "^8.1.0",
     "express": "^4.15.4",
+    "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.18.1",
     "node-sass": "^4.14.1",
     "normalize.css": "^7.0.0",
     "numeral": "^2.0.6",
     "raf": "^3.3.2",
-    "react": "^16.0.0",
-    "react-addons-shallow-compare": "^15.6.0",
+    "react": "^16.13.1",
+    "react-addons-shallow-compare": "^15.6.2",
     "react-dates": "^12.7.0",
     "react-dates-temp": "^21.1.3",
-    "react-dom": "^16.0.1",
+    "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
-    "react-redux": "^5.0.5",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "redux": "^3.7.2",
-    "redux-mock-store": "^1.2.3",
-    "redux-thunk": "^2.2.0",
+    "redux": "^4.0.5",
+    "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^6.0.6",
     "uuid": "^3.1.0",
     "validator": "^8.0.0",
@@ -50,13 +51,12 @@
     "@babel/cli": "^7.10.4",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.1.0",
-    "cross-env": "^5.0.5",
-    "dotenv": "^4.0.0",
-    "enzyme": "^3.0.0",
-    "enzyme-adapter-react-16": "^1.0.0",
-    "enzyme-to-json": "^3.0.1",
+    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.5.0",
     "jest": "^24.1.0",
-    "mini-css-extract-plugin": "^0.9.0",
     "react-test-renderer": "^16.0.0",
     "regenerator-runtime": "^0.13.5",
     "webpack-cli": "^3.3.12",
