--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:prod": "webpack --mode=production -p --env production",
     "dev-server": "webpack-dev-server",
     "test": "cross-env NODE_ENV=test jest --config=jest.config.js",
-    "deploy": "aws s3 sync public/ s3://bwanabanana.com",
+    "deploy": "aws s3 sync public/ s3://expensify.bwanabanana.com",
     "node-server": "node server/server.js"
   },
   "dependencies": {
