--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.10.3",
     "@babel/preset-react": "^7.10.1",
     "aws-amplify": "^3.0.18",
+    "aws-amplify-react": "^4.1.22",
     "babel-loader": "^8.1.0",
     "express": "^4.15.4",
     "fetch": "^1.1.0",
