--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-loader": "^8.1.0",
     "express": "^4.15.4",
     "fetch": "^1.1.0",
+    "js-yaml-loader": "^1.2.2",
     "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.18.1",
     "node-sass": "^4.14.1",
@@ -45,6 +46,7 @@
     "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^6.0.6",
+    "swagger-ui": "^3.32.2",
     "uuid": "^3.1.0",
     "validator": "^8.0.0",
     "webpack": "^4.43.0"
